--- a/HelloWorld/HelloWorld.csproj
+++ b/HelloWorld/HelloWorld.csproj
@@ -106,6 +106,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Comment.cs" />
+    <Compile Include="Utils\CommentModel.cs" />
     <Compile Include="Utils\Save.cs" />
   </ItemGroup>
   <ItemGroup>
