--- a/HelloWorld/HelloWorld.csproj
+++ b/HelloWorld/HelloWorld.csproj
@@ -104,6 +104,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\AnimationModel.cs" />
     <Compile Include="Utils\Comment.cs" />
     <Compile Include="Utils\CommentModel.cs" />
     <Compile Include="Utils\Recents.cs" />
